// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskriv bekymringen din
  </label>
  <textarea
    aria-invalid="false"
    id="<removed>"
    rows="4"
    style="--_ds-field-sizing: 124px;"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  style="margin-top: var(--ds-size-2);"
  type="button"
>
  Tøm feltet
</button>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Disabled Textarea
  </label>
  <textarea
    aria-invalid="false"
    disabled
    id="<removed>"
    style="--_ds-field-sizing: 70px;"
  >
  </textarea>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <textarea
    aria-invalid="false"
    cols="20"
    id="<removed>"
    rows="3"
    style="--_ds-field-sizing: 97px;"
  >
  </textarea>
</ds-field>
`;

exports[`Full Width 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskriv bekymringen din
  </label>
  <textarea
    aria-invalid="false"
    id="<removed>"
    style="--_ds-field-sizing: 70px;"
  >
  </textarea>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <textarea
    aria-invalid="false"
    cols="20"
    id="<removed>"
    rows="3"
    style="--_ds-field-sizing: 97px;"
  >
  </textarea>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Read-Only Textarea
  </label>
  <textarea
    aria-invalid="false"
    id="<removed>"
    readonly
    style="--_ds-field-sizing: 70px;"
  >
  </textarea>
</ds-field>
`;
